Fix converted file

--- a/app/assets/stylesheets/active_admin/active_admin_dragonfly.css.scss
+++ b/app/assets/stylesheets/active_admin/active_admin_dragonfly.css.scss
@@ -18,13 +18,22 @@
 
         &.component-remove {
           label {
-            padding-left:110px width:auto float:none text-align: left;
+            padding-left:110px;
+            width:auto;
+            float:none;
+            text-align: left;
           }
         }
 
         &.component-preview {
           & > a {
-            float:left display:block padding:5px background:white border:1px solid #ccc border-radius:2px img {
+            float:left;
+            display:block;
+            padding:5px;
+            background:white;
+            border:1px solid #ccc;
+            border-radius:2px;
+            img {
               display: block;
             }
           }
